# dlt-mcp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/workflows/: release.yaml  unit_tests.yaml
scripts/: release.sh
src/dlt_mcp/: server.py
src/dlt_mcp/_prompts/: infer_table_reference.py
src/dlt_mcp/_tools/: __init__.py  core.py  search.py
src/dlt_mcp/_utilities/: ingestion.py
tests/: conftest.py  test_entrypoint.py
tests/prompts/: test_registration.py
tests/resources/: query_tool_dataset.csv
tests/sandbox/: test_infer_table_reference.py
tests/tools/: test_core.py  test_display_schema.py  test_infer_table_reference_tools.py  test_registration.py  test_search.py  test_tool_likelihood.py
