[project]
name = "dlt-mcp"
description = "A Model Context Protocol (MCP) server for the Python library dlt."
authors = [
    { name = "dltHub" },
    { name = "zilto", email = "68975210+zilto@users.noreply.github.com" }
]
readme = "README.md"
license = { file = "LICENSE"}
version = "0.3.0"
requires-python = ">=3.10"
keywords = ["mcp", "etl", "elt", "data engineering", "ai"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "dlt>=1.19.0",
    "fastmcp>=3.0.0",
]

[project.scripts]
dlt-mcp = "dlt_mcp.server:start"

[project.urls]
Documentation = "https://github.com/dlt-hub/dlt-mcp#README"
Source = "https://github.com/dlt-hub/dlt-mcp"
Issues = "https://github.com/dlt-hub/dlt-mcp/issues"

[dependency-groups]
dev = [
    "griffe>=1.13.0",
    "prek>=0.2.10",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.11",
    "rust-just>=1.43.0",
    "ty==0.0.1a21",
]

[project.optional-dependencies]
search = [
    "chonkie[code,model2vec]>=1.4.2",
    "lancedb>=0.25.3",
]
# core destinations; alphabetical
athena = ["dlt[athena]"]
az = ["dlt[az]"]
bigquery = ["dlt[bigquery]"]
clickhouse = ["dlt[clickhouse]"]
cli = ["dlt[cli]"]
databricks = ["dlt[databricks]"]
deltalake = ["dlt[deltalake]"]
dremio = ["dlt[dremio]"]
duckdb = ["dlt[duckdb]"]
filesystem = ["dlt[filesystem]"]
gcp = ["dlt[gcp]"]
gs = ["dlt[gs]"]
lancedb = ["dlt[lancedb]"]
motherduck = ["dlt[motherduck]"]
mssql = ["dlt[mssql]"]
postgis = ["dlt[postgis]"]
postgres = ["dlt[postgres]"]
pyiceberg = ["dlt[pyiceberg]"]
qdrant = ["dlt[qdrant]"]
redshift = ["dlt[redshift]"]
s3 = ["dlt[s3]"]
sftp = ["dlt[sftp]"]
snowflake = ["dlt[snowflake]"]
synapse = ["dlt[synapse]"]
weaviate = ["dlt[weaviate]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/dlt_mcp/**", "README.md", "LICENSE"]

[tool.pytest.ini_options]
addopts = "-n auto"
console_output_style = "count"
